--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+src/main/resources/application.properties
+src/main/resources/secret.env
+src/main/resources/secret.env
