--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=telegram-auth
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/telegram-app
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
