--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@ build/
 .vscode/
 
 src/main/resources/application.properties
-src/main/resources/secret.env
-src/main/resources/secret.env
+
+src/main/resources/secret.properties
