--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/telegram-app
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
 
